# llment

./: AGENTS.md  Cargo.toml  README.md  fix_llm_mcp.patch  fix_mcp_edit.patch  fix_mcp_edit_2.patch  fix_mcp_hello.patch  fix_mcp_shell.patch  fix_mcp_shell_2.patch  fix_mcp_shell_3.patch  patch_info.py  patch_llm.py  patch_llm2.py  patch_llm3.py  patch_llm4.py  patch_llm5.py  patch_llm6.py  patch_llm7.py  patch_llment.py  patch_tests.py  test_rmcp.rs
.github/workflows/: rust.yml
configs/: files.mcp.json  hello.mcp.json  mcp.json  shell.mcp.json
crates/gbnf-rs/: AGENTS.md  Cargo.toml
crates/gbnf-rs/src/: lib.rs
crates/llm/: AGENTS.md  Cargo.toml
crates/llm-cli/: AGENTS.md  Cargo.toml
crates/llm-cli/src/: app.rs  builtins.rs  commands.rs  event.rs  main.rs
crates/llm-cli/src/components/: app.rs  chat.rs  command_popup.rs  completion.rs  conversation.rs  error.rs  history.rs  history_item.rs  input.rs  mod.rs  param_popup.rs
crates/llm-cli/src/conversation/: assistant_block.rs  conversation.rs  mod.rs  mutate.rs  node.rs  thought_step.rs  tool_step.rs  user_bubble.rs
crates/llm-core/: AGENTS.md  Cargo.toml
crates/llm-core/src/: lib.rs  openai.rs
crates/llm/src/: gemini.rs  gemini_rust.rs  gpt_oss.rs  harmony.gbnf  harmony.rs  lib.rs  llama_server.rs  llamaserver.rs  mcp.rs  ollama.rs  openai.rs  openai_chat.rs  openai_responses.rs  test_provider.rs  tools.rs
crates/llment/: AGENTS.md  Cargo.toml
crates/llment/prompts/: default.md
crates/llment/prompts/env/: workspace.md
crates/llment/prompts/instructions/: autonomy.md
crates/llment/prompts/meta/: prompt_engineering.md
crates/llment/prompts/roles/: swe.md
crates/llment/prompts/roles/code-agent/: design-lead.md  director.md  eng-team.md  execution-lead.md  reviewer.md
crates/llment/prompts/shell/: apply_patch.md  ls.md
crates/llment/prompts/snippets/env/: workspace.md
crates/llment/prompts/snippets/instructions/: context.md  focus.md  task.md
crates/llment/prompts/snippets/shell/: apply_patch.md  ls.md  timeout.md
crates/llment/prompts/sys/: deep.md.jinja  outer.md.jinja  storyteller.md
crates/llment/prompts/system/: default.md
crates/llment/src/: app.rs  builtins.rs  component.rs  history_edits.rs  main.rs  prompts.rs
crates/llment/src/commands/: agent_mode.rs  clear.rs  continue.rs  load.rs  mod.rs  model.rs  pop.rs  prompt.rs  provider.rs  quit.rs  redo.rs  repair.rs  response.rs  role.rs  save.rs  thought.rs
crates/llment/src/components/: completion.rs  mod.rs
crates/llment/src/conversation/: assistant_block.rs  conversation.rs  mod.rs  node.rs  response_step.rs  tool_step.rs  user_bubble.rs
crates/llment/src/modes/: code_agent.rs  example.rs  mod.rs
crates/llment/tests/prompts/sys/: glob.md  glob.md.jinja  inner.md  tool.md
crates/llment/tests/prompts/system/: glob.md  inner.md  outer.md  tool.md
crates/mcp-chatgpt-proxy/: AGENTS.md  Cargo.toml
crates/mcp-chatgpt-proxy/src/: main.rs
crates/mcp-edit/: AGENTS.md  Cargo.toml  replace_in_content.rs
crates/mcp-edit/src/: lib.rs  main.rs  replace_in_content.rs
crates/mcp-hello/: AGENTS.md  Cargo.toml
crates/mcp-hello/src/: lib.rs  main.rs
crates/mcp-shell/: AGENTS.md  Cargo.toml
crates/mcp-shell/src/: lib.rs  lib.rs.orig  main.rs  shell.rs
crates/ollama-tui-test/: AGENTS.md  Cargo.toml
crates/ollama-tui-test/src/: .markdown.rs.pending-snap  lib.rs  main.rs  markdown.rs  ui.rs
crates/ollama-tui-test/src/components/: chat.rs  input.rs  mod.rs
crates/ollama-tui-test/src/components/history/: assistant.rs  error.rs  mod.rs  separator.rs  thinking.rs  user.rs
crates/ollama-tui-test/src/llm/: gemini.rs  mod.rs  openai.rs
crates/ollama-tui-test/src/snapshots/: ollama_tui_test__markdown__tests__centers_code_block.snap.new  ollama_tui_test__markdown__tests__centers_table.snap.new  ollama_tui_test__markdown__tests__fills_blank_lines_in_code_block.snap.new  ollama_tui_test__markdown__tests__maps_inline_code_colors.snap.new  ollama_tui_test__markdown__tests__preserves_code_block_indentation.snap.new  ollama_tui_test__markdown__tests__renders_bulleted_list.snap.new  ollama_tui_test__markdown__tests__renders_horizontal_rule.snap.new  ollama_tui_test__markdown__tests__renders_numbered_list.snap.new  ollama_tui_test__markdown__tests__renders_strikethrough.snap.new  ollama_tui_test__markdown__tests__renders_table_with_borders.snap.new  ollama_tui_test__markdown__tests__styles_blank_only_code_block.snap.new  ollama_tui_test__markdown__tests__styles_block_quotes.snap.new  ollama_tui_test__markdown__tests__uses_custom_skin_colors.snap.new
crates/ollama-tui-test/tests/: behavior.rs  rendering.rs
sandbox/: Dockerfile  README.md  build  docker-compose.yml
