[package]
name = "llm-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
termimad = "0.33.0"
textwrap = "0.16.2"
tui-textarea = "0.7.0"
tuirealm = "3.0.1"
unicode-width = "0.2.0"
llm = { path = "../llm" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
futures = "0.3"
clap = { version = "4.5.43", features = ["derive"] }

[dev-dependencies]
insta = "1.43.1"
