[package]
name = "llm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-openai = "0.29.0"
async-trait = "0.1.88"
clap = { version = "4.5.43", features = ["derive"] }
gemini-rs = { git = "https://github.com/dstoc/gemini-rs", branch = "include-thoughts", version = "2.0.0" }
ollama-rs = { git = "https://github.com/dstoc/ollama-rs", branch = "RobJellinghaus/streaming-tools", version = "0.3.2", features = ["macros", "stream"] }
rmcp = { version = "0.4.0", features = ["client"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["macros", "rt", "sync"] }
tokio-stream = "0.1.17"
