[package]
name = "llm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
arc-swap = "1.7.1"
async-openai = { version = "0.29.0", features = ["byot"] }
async-trait = "0.1.88"
clap = { version = "4.5.43", features = ["derive"] }
futures-util = "0.3.31"
gbnf-rs = { version = "0.1.0", path = "../gbnf-rs" }
gemini-rust = "1.4.0"
ollama-rs = { git = "https://github.com/dstoc/ollama-rs", branch = "RobJellinghaus/streaming-tools", version = "0.3.2", features = ["macros", "stream"] }
openai-harmony = { git = "https://github.com/openai/harmony", tag = "v0.0.4", version = "0.0.4" }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
reqwest-eventsource = "0.6"
rmcp = { version = "0.4.0", features = ["client", "transport-child-process"] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["fs", "macros", "process", "rt", "sync"] }
tokio-stream = "0.1.17"
uuid = { version = "1.18.0", features = ["v4"] }
