[package]
name = "llment"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = "0.29.0"
termimad = "0.33.0"
textwrap = "0.16.2"
tui-textarea = "0.7.0"
unicode-width = "0.2.0"
llm = { path = "../llm" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures = "0.3"
clap = { version = "4.5.43", features = ["derive"] }
tui-realm-stdlib = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
schemars = "1.0.4"
rmcp = { version = "0.4.0", features = ["client"] }
rust-embed = "8.7.2"
minijinja = { version = "2", features = ["loader"] }
globset = "0.4"
arc-swap = "1.7.1"

[dev-dependencies]
insta = "1.43.1"
