[package]
name = "mcp-chatgpt-proxy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum = { version = "0.8.4", features = ["form", "json"] }
base64 = "0.22.1"
clap = { version = "4.5.47", features = ["derive"] }
futures = "0.3.31"
llm = { version = "0.1.0", path = "../llm" }
rand = "0.9.2"
rmcp = { version = "0.4.0", features = ["server", "transport-streamable-http-server", "auth", "tower", "transport-worker"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
