[package]
name = "mcp-edit"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
rmcp = { version = "0.4", features = ["transport-io"] }
serde = { version = "1", features = ["derive"] }
schemars = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.21"
globset = "0.4"
ignore = "0.4"
glob = "0.3.2"
grep = "0.3.2"

[dev-dependencies]
tempfile = "3"
