[package]
name = "ollama-tui-test"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }
rmcp = { version = "0.4", features = ["transport-child-process", "client"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
textwrap = "0.16"
termimad = "0.33.0"
genai = "0.4.0-alpha.11"

[dev-dependencies]
insta = "1.43.1"
